# enginething

./: CMakeLists.txt  README.md
Shaders/: basicShader.txt
src/engine/: Application.cpp  Application.h  Audio.cpp  Audio.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h  triangle.cpp
src/game/: main.cpp
src/rend/: Context.cpp  RenderTexture.cpp  Shader.cpp
